--- a/style.css
+++ b/style.css
@@ -375,4 +375,6 @@ a img{ background-color: white; border-radius: 20px; padding: 2px 20px;}
     flex-wrap: wrap;
     
   }
+.btn1
+{font-size:13px;}
  }
